(executables
 (names test_berk test_utility test_typing)
 (libraries
    berk
    alcotest
  )
)

(rule
 (alias  runtest)
 (deps ../lib/utility.ml)
 (action (run ./test_utility.exe)))

(rule
 (alias  runtest)
 (deps ../lib/typing.ml)
 (action (run ./test_typing.exe)))

(rule
 (alias  runtest)
 (deps ../bin/main.ml)
 (action (run ./test_berk.exe)))
