(executables
 (names test_utility test_typing test_ast test_type_check test_mir)
 (libraries
    berk
    alcotest
  )
)

(rule
 (alias  runtest)
 (deps ../lib/utility.ml)
 (action (run ./test_utility.exe)))

(rule
 (alias  runtest)
 (deps ../lib/typing.ml)
 (action (run ./test_typing.exe)))

(rule
 (alias  runtest)
 (deps ../lib/ast.ml)
 (action (run ./test_ast.exe)))

(rule
 (alias  runtest)
 (deps ../lib/type_check.ml)
 (action (run ./test_type_check.exe)))

(rule
 (alias  runtest)
 (deps ../lib/mir.ml)
 (action (run ./test_mir.exe)))
